# Vbox

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.md12  evaluate.py  run.sh  t.py  txt
data/coo_origin/iat/: iat_dda_read_skew_committed_pred.txt
data/coo_origin/rat/: rat_dda_double_write_skew1_committed_pred.txt
data/coo_origin/wat/: wat_dda_double_write_skew2_committed_pred.txt
data/data/: result_log.json
output/origin_raw/: coo_result.txt  solver.csv
output/origin_row/: construct.csv  real_word_result.txt  update.csv
output/raw/: construct.csv  efficiency.csv  scalability.csv  solver.csv  update.csv
scripts/: evaluate.py
src/: main.cpp  options.h
src/exception/: isolation_exceptions.h
src/graph/: graph.cpp  graph.h  transitive_closure.cpp  transitive_closure.h
src/solver/: constraint.cpp  constraint.h  solver.cpp  solver.h
src/transaction/: transaction.cpp  transaction.h
src/transform/: HOWTO.txt
src/transform/src/: main.rs
src/verifier/: leopard.cpp  leopard.h  vbox.cpp  vbox.h  verifier.cpp  verifier.h
